kube/currencyRateClient/deployment_currency-rate-client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-rate-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-rate-client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-rate-client
    spec:
      containers:
        - image: registry.gitlab.com/petrelevich/dockerregistry/currency-rate-client:v3
          name: currency-rate-client
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: regcred
