kube/currencyRateClient/service_currency-rate-client.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: currency-rate-client
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: currency-rate-client
  type: ClusterIP
